--- a/charstyles.css
+++ b/charstyles.css
@@ -4,7 +4,7 @@ html {
 
 body {
 	height: 100%;
-	background-color: #151515;
+	background-color: #0a0a0a;
 }
 
 html, body {
@@ -42,26 +42,26 @@ ul {
 
 h1 {
 	text-transform: uppercase;
-	font: 54px/54px 'Raleway', sans-serif;
+	font: 54px/54px 'Cormorant SC', serif;
 	color: #fff;
 	text-align: center;
 }
 
 h3 {
 	text-transform: uppercase;
-	font: 36px/36px 'Raleway', sans-serif;
+	font: 36px/36px 'Cormorant SC', serif;
 	color: #fff;
 	text-align: center;
 }
 
 h5 {
-	font: 24px/24px 'Raleway', sans-serif;
+	font: 24px/24px 'Cormorant SC', serif;
 	color: #fff;
 	text-align: center;
 }
 
 p {
-	font: 30px/30px 'Raleway', sans-serif;
+	font: 30px/30px 'Cormorant SC', serif;
 	color: #fff;
 	text-align: center;
 }
@@ -99,17 +99,17 @@ p {
 }
 
 .container__navmenu li:first-child {
-	padding-right: 261px;
+	padding-right: 235px;
 }
 
 .container__navmenu li:last-child {
 	padding-right: 0;
-	padding-left: 291px;
+	padding-left: 250px;
 }
 
 .container__navmenu a {
 	text-transform: uppercase;
-	font: 24px 'Raleway', sans-serif;
+	font: 24px 'Cormorant SC', serif;
 	color: #fff;
 }
 
@@ -125,7 +125,7 @@ p {
 }
 
 .content__info h1 {
-	font: 46px/46px 'Raleway', sans-serif;
+	font: 46px/46px 'Cormorant SC', serif;
 	padding-top: 55px;
 }
 
@@ -171,6 +171,6 @@ p {
 	text-align: center;
 	padding: 30px 0;
 
-	font: 24px 'Raleway', sans-serif;
+	font: 24px 'Cormorant SC', serif;
 	color: #fff;
 }
