--- a/dcstyles.css
+++ b/dcstyles.css
@@ -42,7 +42,7 @@ ul {
 
 h1 {
 	text-transform: uppercase;
-	font: 54px/54px 'Raleway', sans-serif;
+	font: 54px/54px 'Cormorant SC', serif;
 	color: #000;
 	text-align: center;
 }
@@ -80,17 +80,17 @@ h1 {
 }
 
 .container__navmenu li:first-child {
-	padding-right: 261px;
+	padding-right: 235px;
 }
 
 .container__navmenu li:last-child {
 	padding-right: 0;
-	padding-left: 291px;
+	padding-left: 250px;
 }
 
 .container__navmenu a {
 	text-transform: uppercase;
-	font: 24px 'Raleway', sans-serif;
+	font: 24px 'Cormorant SC', serif;
 	color: #000;
 }
 
@@ -116,7 +116,7 @@ h1 {
 .content__text h1 {
 	text-align: center;
 	text-transform: uppercase;
-	font: 36px/36px 'Raleway', sans-serif;
+	font: 36px/36px 'Cormorant SC', serif;
 	color: #000;
 
 	padding: 61.5px 0;
@@ -153,7 +153,7 @@ h1 {
 .prefooter__block h1 {
 	text-align: center;
 	text-transform: uppercase;
-	font: 36px/36px 'Raleway', sans-serif;
+	font: 36px/36px 'Cormorant SC', serif;
 	color: #000;
 
 	padding-top: 30px;
@@ -180,6 +180,6 @@ a img {
 	text-align: center;
 	padding: 30px 0;
 
-	font: 24px 'Raleway', sans-serif;
+	font: 24px 'Cormorant SC', serif;
 	color: #000;
 }
