--- a/marvelstyles.css
+++ b/marvelstyles.css
@@ -183,3 +183,31 @@ a img {
 	font: 24px 'Cormorant SC', serif;
 	color: #000;
 }
+
+a:hover {
+	color: #820204;
+}
+
+img:hover {
+	opacity: 1;
+	-webkit-animation: flash 1.5s;
+	animation: flash 1.5s;
+}
+
+@-webkit-keyframes flash {
+	0% {
+		opacity: .4;
+	}
+	100% {
+		opacity: 1;
+	}
+}
+
+@keyframes flash {
+	0% {
+		opacity: .4;
+	}
+	100% {
+		opacity: 1;
+	}
+}
