--- a/newsstyles.css
+++ b/newsstyles.css
@@ -96,92 +96,14 @@ h1 {
 
 .content {
 	width: 1200px;
-	height: 650px;
+	height: 1145px;
 	margin: 0 auto;
 }
 
-.text__block {
-	width: 1200px;
-	height: 100px;
-}
-
-.text__block h1 {
-	padding: 70px 0;
-}
-
-.links__section {
-	width: 1200px;
-	height: 400px;
-}
-
-.link__item {
-	float: left;
-	width: 33.33%;
-	padding: 90px 10px;
-}
-
-.link__item a img {
-	padding-left: 55px;
-}
-
-.email__section {
-	width: 1200px;
-	height: 150px;
-}
-
-h5 {
-	text-transform: uppercase;
-	font: 36px/36px 'Cormorant SC', serif;
-	color: #000;
-	text-align: center;
-	padding-top: 20px;
-}
-
-h6 {
-	font: 24px 'Cormorant SC', serif;
-	color: #000;
-	text-align: center;
-}
-
-.footer {
-	width: 1200px;
-	height: 160px;
-	padding: 20px 0;
-	margin: 0 auto;
-}
-
-.footer__text {
-	text-align: center;
-	padding: 30px 0;
-
-	font: 24px 'Cormorant SC', serif;
-	color: #000;
+.newsblock__youtube {
+	padding: 0 320px;
 }
 
 a:hover {
 	color: #820204;
-}
-
-img:hover {
-	opacity: 1;
-	-webkit-animation: flash 1.5s;
-	animation: flash 1.5s;
-}
-
-@-webkit-keyframes flash {
-	0% {
-		opacity: .4;
-	}
-	100% {
-		opacity: 1;
-	}
-}
-
-@keyframes flash {
-	0% {
-		opacity: .4;
-	}
-	100% {
-		opacity: 1;
-	}
 }
