--- a/newsstyles.css
+++ b/newsstyles.css
@@ -104,6 +104,26 @@ h1 {
 	padding: 0 320px;
 }
 
+.newsblock__more {
+	width: 1200px;
+	height: 826px;
+}
+
 a:hover {
 	color: #820204;
+}
+
+.footer {
+	width: 1200px;
+	height: 160px;
+	padding: 20px 0;
+	margin: 0 auto;
+}
+
+.footer__text {
+	text-align: center;
+	padding: 30px 0;
+
+	font: 24px 'Cormorant SC', serif;
+	color: #000;
 }
